# agentscan

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_PLAN.md  ISSUE_PLAN.md  MILESTONE_PLAN.md  README.md  ROADMAP.md  SECURITY.md  provider-versions.json
.github/: dependabot.yml
.github/workflows/: ci.yml  provider-watch.yml  release.yml
benches/: core_paths.rs
desktop/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
desktop/src/: App.tsx  DockApp.test.tsx  DockApp.tsx  SettingsApp.test.tsx  SettingsApp.tsx  main.tsx  platform.ts  providerLogos.test.ts  providerLogos.ts  shared.ts  styles.css  updateCheck.test.ts  updateCheck.ts  useSettingsForm.test.ts  useSettingsForm.ts  useWindowChrome.ts  windowOperations.test.ts  windowOperations.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: commands.rs  contract.rs  lib.rs  main.rs  runner.rs  subscribe.rs  windowing.rs
desktop/src/components/: BootScreen.tsx  DebugLog.tsx  GroupedPicker.test.tsx  GroupedPicker.tsx  LiveStrip.tsx  MultiClientBadge.test.tsx  MultiClientBadge.tsx  SourceFolders.test.tsx  SourceFolders.tsx  SourceKindIcon.tsx  SourceSwitcher.test.tsx  SourceSwitcher.tsx  WindowControls.tsx
desktop/src/effect/: Activation.test.ts  Activation.ts  Appearance.test.ts  Appearance.ts  DebugLog.test.ts  DebugLog.ts  HostIpc.ts  HostnameEnrichment.test.ts  HostnameEnrichment.ts  LiveConnection.test.ts  LiveConnection.ts  Notifications.test.ts  Notifications.ts  Preflight.test.ts  Preflight.ts  PrefsBridge.ts  Profiles.test.ts  Profiles.ts  SummonHotkey.test.ts  SummonHotkey.ts  TauriIpc.ts  appearanceModel.ts  atoms.ts  enrichmentModel.test.ts  enrichmentModel.ts  keybinds.test.ts  keybinds.ts  notificationsModel.test.ts  notificationsModel.ts  notify.ts  pickerViewModel.test.ts  pickerViewModel.ts  preflightViewModel.test.ts  preflightViewModel.ts  prefs.ts  profileModel.test.ts  profileModel.ts  settingsViewModel.test.ts  (+6 more)
docs/: adding-a-provider.md  architecture.md  daemon-operations.md  desktop-client-contract.md  desktop-platform-posture.md  desktop-release-smoke.md  desktop.md  harness-engineering.md  index.md  integration.md  kernel-panic-2026-05-06.md  macos-release-signing.md  metadata-contract.md
docs/adr/: daemon-event-driven-index-with-reconcile-safety-loop.md  desktop-latch-only-daemon-launch.md  desktop-shell-and-shared-client-contract.md  macos-daemon-autostart-and-executable-assessment.md  picker-workspace-grouping-and-location-identity.md  real-agent-lifecycle-e2e-testing.md
docs/notes/: MILESTONE_PLAN.md  ambiguity-corpus.md  automation-migration.md  control-mode-command-transport.md  copilot-cursor-closed-source-probing.md  cursor-cli-support.md  daemon-redesign-brief.md  daemon-redesign-decisions.md  daemon-socket-migration.md  desktop-spike-closeout.md  droid-cli-support.md  interactive-popup.md  interactive-tui.md  kimi-code-support.md  macos-daemon-autostart-adr.md  provider-evidence-ledger.md  provider-evidence-roadmap.md  refactor-implementation-decisions.md  reference-shell-workflow.md  shipped-scope.md
examples/: provider_e2e.rs
plans/: cursor-cli-support.md  interactive-popup.md  remaining-work.md
scripts/: agentscan-popup.sh  build-macos-desktop-app.sh  check-desktop-version.sh  notarize-macos-app.sh  notarize-macos-binary.sh  prepare-release.sh  promote-e2e-frames.sh  provider-release-watch.sh  sign-macos-app.sh  sign-macos-binary.sh
src/: app.rs  main.rs
src/app/: bench_support.rs  cache.rs  classify.rs  cli.rs  commands.rs  config.rs  daemon.rs  doctor.rs  live.rs  mod.rs  model.rs  output.rs  pane_field.rs  path.rs  picker.rs  popup_ui.rs  proc.rs  provider.rs  scanner.rs  snapshot.rs  tests.rs  tmux.rs
tests/: cache_removed_integration.rs  cache_show_integration.rs  cache_validate_integration.rs  daemon_integration.rs  daemon_status_integration.rs
tests/common/: mod.rs  tmux_harness.rs
tests/fixtures/: cache_snapshot_v1.json  tmux_snapshot_ambiguous.txt  tmux_snapshot_titles.txt  tmux_snapshot_with_metadata.txt
tests/provider_e2e/: catalog.toml
(+143 files in other folders)
