[package]
name = "agentscan"
version = "0.1.4"
edition = "2024"

[[bench]]
name = "core_paths"
harness = false

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
crossterm = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
time = { version = "0.3.44", features = ["formatting", "parsing"] }
unicode-width = "0.2.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
proptest = "1.6.0"
tempfile = "3.20.0"
