[package]
name = "agentscan"
version = "0.10.0"
edition = "2024"
description = "Discover and monitor AI coding-agent sessions across tmux panes"
license = "MIT"
repository = "https://github.com/aurokin/agentscan"
keywords = ["tmux", "agents", "cli", "terminal", "monitoring"]
categories = ["command-line-utilities", "development-tools"]
# Floor set by stabilized let-chains (`if let … && …`), used throughout.
rust-version = "1.88"

[[bench]]
name = "core_paths"
harness = false

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
clap_complete = "4"
crossterm = "0.29.0"
libc = "0.2.177"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
time = { version = "0.3.44", features = ["formatting", "parsing"] }
toml = "0.8.19"
unicode-width = "0.2.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
proptest = "1.6.0"
tempfile = "3.20.0"
