[package]
name = "agentscan-desktop"
version = "0.3.0"
description = "Mac-first desktop shell for agentscan"
authors = ["agentscan"]
edition = "2024"

[lib]
name = "agentscan_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tauri = { version = "2.9.4", features = [] }
tauri-plugin-global-shortcut = "2.3.1"
