[package]
name = "agentscan-desktop"
version = "0.7.6"
description = "Mac-first desktop shell for agentscan"
authors = ["agentscan"]
edition = "2024"

[lib]
name = "agentscan_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
gethostname = "1.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
# The transparent window the glass/vibrancy effect needs is gated on Tauri's
# macos-private-api feature, which the CLI keeps in sync with `macOSPrivateApi:
# true` in tauri.conf.json (both must agree, or `tauri dev` errors). Fine for
# direct distribution; would risk Mac App Store review (not our channel).
tauri = { version = "2.9.4", features = ["macos-private-api"] }
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-single-instance = "2.4.2"

# Glass effect (NSVisualEffectView) is macOS-only; don't build it elsewhere.
[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.7.1"
